[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askgpt"
version = "0.0.2"
authors = [
  { name="Nikos Askitas", email="askitas@iza.org" },
]
description = "chatGPT copilot kind of thing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://askitas.com"
